<resources>
    <string name="app_name">OBDZulBeta</string>
    <string name="hello_msg">Zul OBD Beta</string>
    <string name="coloque_montadora">Coloque montadora:</string>
    <string name="coloque_modelo">Coloque modelo:</string>
    <string name="cilindrada_1_0_1_3">Cilindrada 1.0, 1.3:</string>
    <string name="ano_do_carro">Ano do carro:</string>
    <string name="send">NEXT</string>
    <string name="coloque_combust_vel">Coloque combustível</string>
    <string name="come_ar">começar</string>
    <string name="carList">Lista de carros</string>
    <string name="delete">Delete</string>
    <string name="consumo_de_comb_stivel">Consumo de combustível</string>
    <string name="codigos_de_erro">Códigos de erro</string>
    <string name="temperatura">Temperatura</string>
    <string name="bateria">Bateria</string>
    <string name="alternador">Alternador</string>
    <string name="status">conectando..</string>
    <string name="stop_log">STOP LOG</string>
    <string name="home">HOME</string>
    <string name="send_logs">send logs</string>
</resources>
