<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:orientation="vertical"
    android:gravity="center_vertical">


    <EditText
        android:id="@+id/brandText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coloque_montadora"
        android:gravity="start"
        android:inputType=""
        android:autofillHints="" /><!--gravity of a edit text-->
    <EditText
        android:id="@+id/modelText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coloque_modelo"
        android:gravity="start"
        android:inputType=""
        android:autofillHints="" /><!--gravity of a edit text-->
    <EditText
        android:id="@+id/yearText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ano_do_carro"
        android:gravity="start"
        android:inputType=""
        android:autofillHints="" /><!--gravity of a edit text-->
    <EditText
        android:id="@+id/engineText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cilindrada_1_0_1_3"
        android:gravity="start"
        android:inputType=""
        android:autofillHints="" /><!--gravity of a edit text-->
    <EditText
        android:id="@+id/fuelType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coloque_combust_vel"
        android:gravity="start"
        android:inputType=""
        android:autofillHints="" /><!--gravity of a edit text-->

    <Button
        android:id="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:onClick="beginService"/>

</LinearLayout>